--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,30 @@
+# Extracteur d'avis Amazon - Dépendances Python
+# Installation: pip install -r requirements.txt
+
+# Framework web pour l'interface utilisateur
 streamlit>=1.28.0
-pandas>=2.0.0
+
+# Requêtes HTTP pour scraper Amazon (avec support session)
+requests>=2.31.0
+
+# Parsing HTML pour extraire les avis
 beautifulsoup4>=4.12.0
+
+# Manipulation de données et export CSV
+pandas>=2.0.0
+
+# Analyse de sentiment des commentaires
+textblob>=0.17.1
+
+# Parsers HTML additionnels pour robustesse
 lxml>=4.9.0
 html5lib>=1.1
+
+# Gestion des expressions régulières améliorée
+regex>=2023.10.3
+
+# Support pour l'analyse de données
+numpy>=1.24.0
+
+# Optionnel: pour contourner certaines protections
+fake-useragent>=1.4.0
